<resources>
    <string name="app_name">Watery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">昵称：</string>
    <string name="sex">性别：</string>
    <string name="weight">体重：</string>
    <string name="statue">活动水平：</string>
    <string name="weather">天气：</string>
    <string name="measure">开始测试</string>
    <string name="tip">通过计算您一天需要摄取（计算仅供参考）：</string>
    <string name="aim">设为目标</string>
    <string name="cancel">返回</string>
    <string name="confirm">确认</string>
    <string name="kg">kg</string>
    <string name="ml">ml</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
